--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <br>
         <h2>How to Request a Profile Picture (PFP):</h2>
         <p>You can click the instructions.</p>
-        <a href="https://discord.gg/userpfp-1129784704267210844" class="download-btn">1. Join the UserPFP Discord Server.</a>
+        <a href="https://discord.gg/userpfp-1129784704267210844">1. Join the UserPFP Discord Server.</a>
         <br>
-        <a href="https://discord.com/channels/1129784704267210844/1162834399801384970" class="download-btn">2. Familiarize yourself with the server rules.</a>
+        <a href="https://discord.com/channels/1129784704267210844/1162834399801384970">2. Familiarize yourself with the server rules.</a>
         <br>
-        <a href="https://discord.com/channels/1129784704267210844/1162800344603037856" class="download-btn">3. Navigate to the #request-here channel.</a>
+        <a href="https://discord.com/channels/1129784704267210844/1162800344603037856">3. Navigate to the #request-here channel.</a>
         <br>
-        <a href="https://discord.com/channels/1129784704267210844/1162800681409855600" class="download-btn">4. Await approval from our team.</a>
+        <a href="https://discord.com/channels/1129784704267210844/1162800681409855600">4. Await approval from our team.</a>
         <br>
         <p>Example PFPs:</p>
     </div>
