--- a/server.html
+++ b/server.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>USERPFP Discord Server</title>
@@ -9,14 +10,18 @@
     <style>
         /* Add a hover animation for the GitHub icon */
         .github-icon {
-            width: 50px; /* Adjust the size of the GitHub icon */
+            width: 50px;
+            /* Adjust the size of the GitHub icon */
             height: 50px;
-            transition: transform 0.3s, filter 0.3s; /* Add a smooth transition */
+            transition: transform 0.3s, filter 0.3s;
+            /* Add a smooth transition */
         }
 
         .github-icon:hover {
-            transform: scale(1.2); /* Increase the size on hover */
-            filter: brightness(1.5); /* Add brightness on hover */
+            transform: scale(1.2);
+            /* Increase the size on hover */
+            filter: brightness(1.5);
+            /* Add brightness on hover */
         }
 
         /* Add a hover animation for the "Join Server" button */
@@ -28,11 +33,13 @@
             color: #fff;
             background-color: #7289da;
             border-radius: 5px;
-            transition: background-color 0.3s; /* Add a smooth transition */
+            transition: background-color 0.3s;
+            /* Add a smooth transition */
         }
 
         .server-button:hover {
-            background-color: #4a4d52; /* Change the background color on hover */
+            background-color: #4a4d52;
+            /* Change the background color on hover */
         }
 
         /* Style the server container */
@@ -72,6 +79,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="navbar">
         <a href="https://userpfp.github.io/website/index.html">Home</a>
@@ -79,17 +87,24 @@
         <a href="https://userpfp.github.io/website/server.html">Discord</a>
     </div>
     <div class="server-container">
-        <img class="server-image" src="https://cdn.discordapp.com/discovery-splashes/1129784704267210844/bd091e64962f6ea55e749b1fcb90f36d.jpg?size=2048" alt="Server Banner">
+        <img class="server-image"
+            src="https://cdn.discordapp.com/discovery-splashes/1129784704267210844/bd091e64962f6ea55e749b1fcb90f36d.jpg?size=2048"
+            alt="Server Banner">
         <div class="server-info">
             <h1>Welcome to USERPFP Discord Server</h1>
-            <p>Join our community where members hang out, share AI art, code, and have team wars between characters. We have a gallery channel that you can post Gaming clips and AI art in. We have a coding channel that you can use to share code, and you can use the support channel if you need any support. Join and let your Profile Picture guide the way!</p>
+            <p>Join our community where members hang out, share AI art, code, and have team wars between characters. We
+                have a gallery channel that you can post Gaming clips and AI art in. We have a coding channel that you
+                can use to share code, and you can use the support channel if you need any support. Join and let your
+                Profile Picture guide the way!</p>
         </div>
         <div class="server-buttons">
             <a href="https://github.com/userpfp/userpfp" target="_blank">
                 <img class="github-icon" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Icon">
             </a>
-            <a class="server-button" href="https://discord.com/invite/userpfp-1129784704267210844" target="_blank">Join Server</a>
+            <a class="server-button" href="https://discord.com/invite/userpfp-1129784704267210844" target="_blank">Join
+                Server</a>
         </div>
     </div>
 </body>
+
 </html>
