--- a/staff.html
+++ b/staff.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,13 +13,15 @@
             margin: 0;
             padding: 0;
             font-family: 'Uni Sans', sans-serif;
-            background-color: #282c35; /* Updated background color */
+            background-color: #282c35;
+            /* Updated background color */
             color: #ffffff;
         }
 
         .navbar {
             text-align: center;
-            background-color: #3d424d; /* Updated navbar background color */
+            background-color: #3d424d;
+            /* Updated navbar background color */
             padding: 15px;
             margin-bottom: 20px;
         }
@@ -42,7 +45,8 @@
             flex-direction: column;
             align-items: center;
             transition: transform 0.3s, box-shadow 0.3s;
-            background-color: #394050; /* Darker background for staff members */
+            background-color: #394050;
+            /* Darker background for staff members */
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -56,8 +60,9 @@
 
         .avatar-container {
             position: relative;
-            width:  150px;
-            height: 300px; /* Fixed height for avatar container */
+            width: 150px;
+            height: 300px;
+            /* Fixed height for avatar container */
             overflow: hidden;
             margin-bottom: 5px;
             margin-top: 5px;
@@ -86,7 +91,8 @@
         .description-box {
             width: 100%;
             padding: 15px;
-            background-color: #394050; /* Darker background for staff descriptions */
+            background-color: #394050;
+            /* Darker background for staff descriptions */
             border: 3px solid #7289DA;
             border-radius: 0 0 10px 10px;
             box-sizing: border-box;
@@ -94,12 +100,14 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            opacity: 0; /* Initially hidden */
+            opacity: 0;
+            /* Initially hidden */
             transition: opacity 0.3s;
         }
 
         .staff-member:hover .description-box {
-            opacity: 1; /* Show on hover */
+            opacity: 1;
+            /* Show on hover */
         }
 
         .staff-info p {
@@ -109,34 +117,38 @@
         }
     </style>
 </head>
+
 <body>
     <div class="navbar">
         <a href="https://userpfp.github.io/website/index.html">Home</a>
         <a href="https://userpfp.github.io/website/staff.html">Staff</a>
         <a href="https://userpfp.github.io/website/server.html">Discord</a>
     </div>
+    <!-- Staff Member 1 -->
+    <div class="staff-member">
+        <img class="banner" src="https://i.imgur.com/vzyxjz8.gif">
+        <div class="avatar-container">
+            <img class="avatar" src="https://i.imgur.com/aRCm6Pt.png" alt="User Avatar"
+                data-discord-id="406084422308331522" data-default-avatar="406084422308331522.gif">
+        </div>
+        <div class="username">Coolesding</div>
+        <div class="description-box">
+            <p>The newest owner of UserPFP. Passionate about writing good-looking and efficient CSS code.</p>
+        </div>
+    </div>
+
     <div class="container">
-        <!-- Staff Member 1 -->
+        <!-- Staff Member 2 -->
         <div class="staff-member">
             <img class="banner" src="https://i.imgur.com/U3xaMjR.gif">
             <div class="avatar-container">
-                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar" data-discord-id="789872551731527690" data-default-avatar="789872551731527690.gif">
+                <img class="avatar"
+                    src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif"
+                    alt="User Avatar" data-discord-id="789872551731527690" data-default-avatar="789872551731527690.gif">
             </div>
             <div class="username">FoxStorm1</div>
             <div class="description-box">
-                <p>A developer and the owner of UserPFP. Passionate about remaking and improving UserPFP.</p>
-            </div>
-        </div>
-
-        <!-- Staff Member 2 -->
-        <div class="staff-member">
-            <img class="banner" src="https://i.imgur.com/vzyxjz8.gif">
-            <div class="avatar-container">
-                <img class="avatar" src="https://i.imgur.com/aRCm6Pt.png" alt="User Avatar" data-discord-id="406084422308331522" data-default-avatar="406084422308331522.gif">
-            </div>
-            <div class="username">Coolesding</div>
-            <div class="description-box">
-                <p>Passionate about writing good-looking and efficient CSS code.</p>
+                <p>The old owner of UserPFP. Passionate about remaking and improving UserPFP.</p>
             </div>
         </div>
 
@@ -144,7 +156,9 @@
         <div class="staff-member">
             <img class="banner" src="https://i.ibb.co/MBY0qxx/nexpid.gif">
             <div class="avatar-container">
-                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar" data-discord-id="853550207039832084" data-default-avatar="853550207039832084.gif">
+                <img class="avatar"
+                    src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif"
+                    alt="User Avatar" data-discord-id="853550207039832084" data-default-avatar="853550207039832084.gif">
             </div>
             <div class="username">Nexpid</div>
             <div class="description-box">
@@ -157,7 +171,9 @@
         <div class="staff-member">
             <img class="banner" src="https://i.imgur.com/FiRr8Lj.png">
             <div class="avatar-container">
-                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/848339671629299742.gif" alt="User Avatar" data-discord-id="848339671629299742" data-default-avatar="848339671629299742.gif">
+                <img class="avatar"
+                    src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/848339671629299742.gif"
+                    alt="User Avatar" data-discord-id="848339671629299742" data-default-avatar="848339671629299742.gif">
             </div>
             <div class="username">Thororen</div>
             <div class="description-box">
@@ -169,7 +185,8 @@
         <div class="staff-member">
             <img class="banner" src="https://i.imgur.com/bAuCtgB.png">
             <div class="avatar-container">
-                <img class="avatar" src="https://i.imgur.com/pqQfTII.png" alt="User Avatar" data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
+                <img class="avatar" src="https://i.imgur.com/pqQfTII.png" alt="User Avatar"
+                    data-discord-id="500212086765518858" data-default-avatar="599fef33e29636709a38b1faef61580d.png">
             </div>
             <div class="username">Clayy</div>
             <div class="description-box">
@@ -180,4 +197,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
