--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>UserPFP</title>
@@ -31,13 +32,16 @@
         /* Center the header */
         .header {
             text-align: center;
-            margin-bottom: 20px; /* Increase the margin for a better separation */
+            margin-bottom: 20px;
+            /* Increase the margin for a better separation */
         }
 
         /* Style the widget container without margin */
         .widget {
-            max-width: 800px; /* Adjusted max-width for better readability */
-            text-align: center; /* Center the content within the widget */
+            max-width: 800px;
+            /* Adjusted max-width for better readability */
+            text-align: center;
+            /* Center the content within the widget */
         }
 
         /* Style the iframe within the widget */
@@ -94,6 +98,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="navbar">
         <a href="index.html">Home</a>
@@ -108,11 +113,14 @@
         <p>You can click the instructions.</p>
         <a href="https://discord.gg/userpfp-1129784704267210844">1. Join the UserPFP Discord Server.</a>
         <br>
-        <a href="https://discord.com/channels/1129784704267210844/1162834399801384970">2. Familiarize yourself with the server rules.</a>
+        <a href="https://discord.com/channels/1129784704267210844/1162834399801384970">2. Familiarize yourself with the
+            server rules.</a>
         <br>
-        <a href="https://discord.com/channels/1129784704267210844/1162800344603037856">3. Navigate to the #request-here channel.</a>
+        <a href="https://discord.com/channels/1129784704267210844/1162800344603037856">3. Navigate to the #request-here
+            channel.</a>
         <br>
-        <a href="https://discord.com/channels/1129784704267210844/1162800681409855600">4. Await approval from our team.</a>
+        <a href="https://discord.com/channels/1129784704267210844/1162800681409855600">4. Await approval from our
+            team.</a>
         <br>
         <p>Example PFPs:</p>
     </div>
@@ -122,4 +130,5 @@
         <iframe src="https://userpfp.github.io/website/widget.html" width="100%" height="300" frameborder="0"></iframe>
     </div>
 </body>
+
 </html>
