--- a/widget.html
+++ b/widget.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,28 +13,40 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            width: 100vw; /* Use viewport width to fill the entire screen */
+            width: 100vw;
+            /* Use viewport width to fill the entire screen */
         }
 
         .moving-container {
             display: flex;
             justify-content: center;
-            align-items: center; /* Center items vertically */
-            gap: 10px; /* Adjust the spacing between avatars */
-            flex-wrap: nowrap; /* Prevent wrapping to the next line */
-            overflow-x: auto; /* Enable horizontal scrolling */
+            align-items: center;
+            /* Center items vertically */
+            gap: 10px;
+            /* Adjust the spacing between avatars */
+            flex-wrap: nowrap;
+            /* Prevent wrapping to the next line */
+            overflow-x: auto;
+            /* Enable horizontal scrolling */
             width: 100%;
-            max-width: auto; /* Adjust the maximum width of the container */
-            margin: 0 auto; /* Center the container horizontally */
-            position: fixed; /* Use fixed positioning */
-            top: 0; /* Position the container at the top of the page */
+            max-width: auto;
+            /* Adjust the maximum width of the container */
+            margin: 0 auto;
+            /* Center the container horizontally */
+            position: fixed;
+            /* Use fixed positioning */
+            top: 0;
+            /* Position the container at the top of the page */
         }
 
         .moving-image-container {
-            border: 3px solid #ffffff; /* Add a 3px wide white border around the container */
+            border: 3px solid #ffffff;
+            /* Add a 3px wide white border around the container */
             background-color: #36393f;
-            width: 100px; /* Adjust the size of the avatars as needed */
-            height: 100px; /* Preserve the 1:1 aspect ratio */
+            width: 100px;
+            /* Adjust the size of the avatars as needed */
+            height: 100px;
+            /* Preserve the 1:1 aspect ratio */
             overflow: hidden;
             position: relative;
             border-radius: 50%;
@@ -50,6 +63,7 @@
         }
     </style>
 </head>
+
 <body>
     <script>
         async function getValidGifURLs() {
@@ -119,4 +133,5 @@
         createDynamicBackground();
     </script>
 </body>
+
 </html>
