--- a/staff.html
+++ b/staff.html
@@ -34,7 +34,7 @@
 
         .container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(475px, 1fr));
             gap: 20px;
             justify-content: center;
             margin: 20px;
@@ -51,7 +51,7 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             height: 400px;
-            width: 100%;
+            width: 600px;
         }
 
         .staff-member:hover {
@@ -78,7 +78,7 @@
 
         .banner {
             position: absolute;
-            width: 615px;
+            width: 600px;
             height: 400px;
         }
 
@@ -93,7 +93,6 @@
         .description-box {
             width: 100%;
             padding: 15px;
-            /* Darker background for staff descriptions */
             border-radius: 0 0 10px 10px;
             box-sizing: border-box;
             height: 100%;
@@ -108,6 +107,11 @@
 
         .staff-member:hover .description-box {
             opacity: 1;
+            /* Show on hover */
+        }
+
+        .staff-member:hover .banner {
+            opacity: 0.25;
             /* Show on hover */
         }
 
@@ -169,6 +173,7 @@
             </div>
         </div>
 
+        <!-- New Staff Members -->
         <!-- Staff Member 4 -->
         <div class="staff-member">
             <img class="banner" src="https://i.imgur.com/FiRr8Lj.png">
