--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
         /* Style the iframe within the widget */
         .widget iframe {
-            width: 99vw;
-            height: 24vh;
+            width: 100vw;
+            height: auto;
             border: none;
         }
 
@@ -126,6 +126,8 @@
     </div>
     <div class="widget" style="justify-content: center;">
         <!-- Your widget content goes here -->
+        <br>
+        <iframe src="https://userpfp.github.io/website/widget.html" width="100%" height="300" frameborder="0"></iframe>
         <br>
         <iframe src="https://userpfp.github.io/website/widget.html" width="100%" height="300" frameborder="0"></iframe>
     </div>
