Fix Whatever The Hell Bad Gap That Was

--- a/staff.html
+++ b/staff.html
@@ -35,12 +35,13 @@
         .container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
+            gap: 50px;
             justify-content: center;
             margin: 20px;
         }
 
         .staff-member {
+            transform: scale(1.1);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -51,11 +52,6 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             height: 350px;
-        }
-
-        .staff-member:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         }
 
         .staff-member:hover {
@@ -82,7 +78,7 @@
 
         .banner {
             position: absolute;
-            width: 375px;
+            width: 400px;
             height: 350px;
         }
 
@@ -153,7 +149,7 @@
             <img class="banner" src="https://i.imgur.com/U3xaMjR.gif">
             <div class="avatar-container">
                 <img class="avatar"
-                    src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif"
+                    src="https://i.imgur.com/3PQBLtv.png"
                     alt="User Avatar" data-discord-id="789872551731527690" data-default-avatar="789872551731527690.gif">
             </div>
             <div class="username">FoxStorm1</div>
@@ -176,7 +172,6 @@
             </div>
         </div>
 
-        <!-- New Staff Members -->
         <!-- Staff Member 4 -->
         <div class="staff-member">
             <img class="banner" src="https://i.imgur.com/FiRr8Lj.png">
@@ -217,58 +212,29 @@
             </div>
         </div>
 
-        <!-- CURRENTLY FILLER -->
-
-        <!-- Staff Member 7 -->
+        <!-- Staff Member 7-->
         <div class="staff-member">
-            <img class="banner" src="https://media1.tenor.com/m/hRRIwu8lxB4AAAAC/bare-minimum-evangelion.gif">
+            <img class="banner" src="https://i.imgur.com/ZflpQQ3.png">
             <div class="avatar-container">
-                <img class="avatar" src="https://i.imgur.com/maRzwz2.jpg" alt="User Avatar" data-discord-id=""
-                    data-default-avatar="">
+                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/9/929208515883569182.gif" alt="User Avatar" data-discord-id="929208515883569182"
+                    data-default-avatar="929208515883569182.png">
             </div>
-            <div class="username">Unknown</div>
+            <div class="username">Indi</div>
             <div class="description-box">
-                <p>Queued the wrong music?!?</p>
+                <p>Ping = mute</p>
             </div>
         </div>
 
-        <!-- Staff Member 8 -->
+        <!-- Staff Member 8-->
         <div class="staff-member">
-            <img class="banner" src="https://media1.tenor.com/m/UBHYezmc5nsAAAAC/evangelion.gif">
+            <img class="banner" src="https://i.imgur.com/2mitqtb.png">
             <div class="avatar-container">
-                <img class="avatar" src="https://media1.tenor.com/m/PPu-SWuYm-4AAAAd/asuka-point.gif" alt="User Avatar"
-                    data-discord-id="" data-default-avatar="">
+                <img class="avatar" src="https://i.imgur.com/q306O9n.png"
+                    alt="User Avatar" data-discord-id="258731845267619840" data-default-avatar="258731845267619840.png">
             </div>
-            <div class="username">Unknown</div>
+            <div class="username">p0rtl</div>
             <div class="description-box">
-                <p>The robot was too fast too furious!</p>
-            </div>
-        </div>
-
-        <!-- Staff Member 9 -->
-        <div class="staff-member">
-            <img class="banner"
-                src="https://media1.tenor.com/m/OxC5N_7RHgQAAAAd/hyejinsgenre-neon-genesis-evangelion.gif">
-            <div class="avatar-container">
-                <img class="avatar" src="https://media1.tenor.com/m/dwXt2IJ-TKoAAAAd/kaji-evangelion.gif"
-                    alt="User Avatar" data-discord-id="" data-default-avatar="">
-            </div>
-            <div class="username">Unknown</div>
-            <div class="description-box">
-                <p>Pencilgon vs Sunraku when?</p>
-            </div>
-        </div>
-
-        <!-- Staff Member 10 -->
-        <div class="staff-member">
-            <img class="banner" src="https://media1.tenor.com/m/3SJrBPHrsJYAAAAC/shinji.gif">
-            <div class="avatar-container">
-                <img class="avatar" src="https://media1.tenor.com/m/VIDuhwlmLKAAAAAd/shinji-shinji-ikari.gif"
-                    alt="User Avatar" data-discord-id="" data-default-avatar="">
-            </div>
-            <div class="username">Unknown</div>
-            <div class="description-box">
-                <p>I ran out of ideas?</p>
+                <p>TBA</p>
             </div>
         </div>
     </div>
